--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+body{
+	width:1100px;
+}
+td:first-child, td:last-child{
+	width:200px;
+}
+
+td:nth-child(2){
+	width:600px;
+}
